install pack angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>{{ title }}</h1> <!--Двойные фигурные скобки, интерполяция-->
+<h1 *ngIf="isTitleShow">{{ title }}</h1> <!--Двойные фигурные скобки, интерполяция-->
 
-<button>Нажато {{counter}} раз</button>
+<button (click)="increment()">Нажато {{counter}} раз</button>
+
+<h2>{{ myNumbers[3] }}</h2>
+
+<h2 *ngFor="let item of myNumbers; let i = index">{{item}} - {{ i }}</h2> <!--директивы бывают 2 типов, структурные, и атрибутивные, ngfor - структурная деректива -->
+<!-- есть еще кастомные директивы (@Diractive) 
+у директивы нет своего html кода, а так нет никаких отличий от директивы и компонента
+-->
+
