--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" (click)="selectValue()">
   <h2 class="container__text">Value</h2>
   <h3 class="container__value">
   <!-- <ng-content></ng-content> -->
