--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-<h1 *ngIf="isTitleShow">{{ title }}</h1> <!--Двойные фигурные скобки, интерполяция-->
-<h2 *ngIf="selectedValue">Нажато на {{ selectedValue }}</h2>
-
-<button (click)="increment()">Нажато {{counter}} раз</button>
-
-<h2>{{ myNumbers[3] }}</h2>
-
-<!--<h2 *ngFor="let item of myNumbers; let i = index">{{item}} - {{ i }}</h2> <!--директивы бывают 2 типов, структурные, и атрибутивные, ngfor - структурная деректива -->
-<!-- есть еще кастомные директивы (@Diractive)
-у директивы нет своего html кода, а так нет никаких отличий от директивы и компонента
--->
-
-<app-item *ngFor="let item of myNumbers" [value]="item" (selectEvent)="onSelect($event)"></app-item>
-
+<div class="container">
+  <app-task [task]="item" *ngFor="let item of taskList"></app-task>
+</div>
