--- a/src/app/components/task/task.components.html
+++ b/src/app/components/task/task.components.html
@@ -6,5 +6,5 @@
     <span class="info__description">{{ task.description }}</span>
   </div>
 
-  <span class="date">{{ task.datetime }}</span>
+  <span class="date">{{ task.datetime | appDateTimePipe }}</span>
 </div>
