--- a/src/app/components/task/task.components.scss
+++ b/src/app/components/task/task.components.scss
@@ -39,6 +39,22 @@
     bottom: 10px;
     color: gray;
   }
+
+  .delete {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    background-color: red;
+    color: wheat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+
 }
 
 
