--- a/src/app/components/task/task.components.scss
+++ b/src/app/components/task/task.components.scss
@@ -40,21 +40,28 @@
     color: gray;
   }
 
-  .delete {
+  .btn {
     position: absolute;
-    right: 5px;
+    width: 20px;
     top: 5px;
-    width: 30px;
-    height: 30px;
+    height: 20px;
     cursor: pointer;
-    background-color: red;
     color: wheat;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-  }
 
+    &_delete {
+      right: 5px;
+      background-color: red;
+    }
+
+    &_edit {
+      right: 30px;
+      background-color: blue;
+    }
+  }
 }
 
 
