--- a/src/app/components/task/task.components.html
+++ b/src/app/components/task/task.components.html
@@ -1,7 +1,7 @@
 <div class="task">
   <ng-container *ngIf="isEdit then edit else view"></ng-container>
 
-  <div class="btn btn_edit" (click)="toggleEdit()">E</div>
+  <div class="btn btn_edit" [class.btn_active]="isEdit" [style.color]="'red'" (click)="toggleEdit()">E</div>
   <div class="btn btn_delete" (click)="deleteTask()">X</div>
 </div>
 
@@ -18,8 +18,8 @@
 
 <ng-template #edit>
   <div class="info">
-    <span class="info__name">{{ task.name }}</span>
-    <span class="info__description">{{ task.description }}</span>
+    <input type="text" class="info__name" [(ngModel)]="task.name">
+    <input type="text" class="info__description" [(ngModel)]="task.description">
   </div>
 
   <span class="date">{{ task.datetime | appDateTimePipe }}</span>
