--- a/src/app/components/task/task.components.scss
+++ b/src/app/components/task/task.components.scss
@@ -22,6 +22,7 @@
       font-weight: bold;
       font-size: 18px;
       margin-bottom: 10px;
+      outline: none;
     }
 
     &__description {
@@ -30,6 +31,7 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+      outline: none;
     }
   }
 
@@ -60,6 +62,10 @@
     &_edit {
       right: 30px;
       background-color: blue;
+    }
+
+    &_active {
+      background-color: yellow;
     }
   }
 }
