--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-task (deleteEvent)="deleteItem($event)" [task]="item" *ngFor="let item of taskList"></app-task>
+  <app-task (deleteEvent)="deleteItem($event)" [task]="item" *ngFor="let item of taskList"></app-task> <!--| async -->
 </div>
 
 <!--<input type="text" [(ngModel)]="testValue">-->
