--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <app-task (deleteEvent)="deleteItem($event)" [task]="item" *ngFor="let item of taskList"></app-task> <!--| async -->
 </div>
 
+<app-add-task></app-add-task>
+
 <!--<input type="text" [(ngModel)]="testValue">-->
 <!--<button (click)="addOne()">Add 1</button>-->
 
