--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <input type="text" class="container__input" placeholder="Task name...">
+<form [formGroup]="taskForm" class="container">
+  <input type="text" class="container__input" formControlName="taskName" placeholder="Task name...">
   <button class="container__add">ADD</button>
-</div>
+</form>
