--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" appFirst>
   <app-task (deleteEvent)="deleteItem($event)" [task]="item" *ngFor="let item of taskList"></app-task> <!--| async -->
 </div>
 
-<app-add-task></app-add-task>
+<app-add-task (newTaskAdd)="addNewTask($event)"></app-add-task>
 
 <!--<input type="text" [(ngModel)]="testValue">-->
 <!--<button (click)="addOne()">Add 1</button>-->
