--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -5,6 +5,7 @@
   formControlName="taskName" p
   laceholder="Task name..."
   (keypress)="keyPressHandler($event)"
+  appEnterPress
   >
   <button (click)="addTask()" class="container__add">ADD</button>
 
