--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -4,7 +4,7 @@
   class="container__input" [class.container__input_error]="taskName.errors && taskName.touched"
   formControlName="taskName" p
   laceholder="Task name..."
-  (keypress)="keyPressHandler($event)"
+  (enterPress)="enterPressHandler()"
   appEnterPress
   >
   <button (click)="addTask()" class="container__add">ADD</button>
