--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,11 @@
-.container {
-  width: 400px;
-  height: 80vh;
-  overflow: hidden;
-  box-shadow: 0 0 10px 0 black;
-  padding: 5px;
-  overflow-y: auto;
+.header {
+  width: 100%;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  background-color: cadetblue;
+  box-sizing: border-box;
 }
