--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,4 +8,21 @@
   align-items: center;
   background-color: cadetblue;
   box-sizing: border-box;
+
+  .links {
+    margin-left: 30px;
+    font-size: 15px;
+    color: white;
+    cursor: pointer;
+
+    span {
+      padding-right: 15px;
+      outline: none;
+    }
+  }
 }
+
+.active-link {
+  text-shadow: 0 0 3px red;
+}
+
